--- a/jmx_monitor/config.yml
+++ b/jmx_monitor/config.yml
@@ -1,5 +1,5 @@
 startDelaySeconds: 0
-hostPort: insight-service-app-4:7778
+hostPort: localhost:7778
 username:
 password:
 ssl: false
@@ -7,7 +7,7 @@ lowercaseOutputName: true
 rules:
 
 - pattern : java.lang<type=GarbageCollector, name=(G1 Young Generation|G1 Old Generation)><LastGcInfo>(duration|GcThreadCount)
-  name: kafka_gc_lastgc
+  name: gc_lastgc
   labels:
     space: "$1"
     type: "$2"
